@@ -7,19 +7,20 @@ socket_receive_rrr_message=yes
 [instance_httpclient]
 module=httpclient
 senders=instance_socket
+http_message_timeout_ms=2000
 #http_message_timeout_ms=5000
 http_server=localhost
 http_port=8000
-http_version_10=yes
-http_method=post
+#http_version_10=yes
+#http_method=post
 http_endpoint_tag=endpoint
 http_server_tag=server
 http_port_tag=port
-http_body_tag=body
-http_body_tag_force=yes
+#http_body_tag=body
+#http_body_tag_force=yes
 #http_no_data=yes
-http_content_type_tag=content_type
-http_content_type_boundary_tag=content_type_boundary
+#http_content_type_tag=content_type
+#http_content_type_boundary_tag=content_type_boundary
 #http_receive_json_data=yes
 http_receive_part_data=yes
 
